@@ -48,6 +48,7 @@ sub new
 {
 	my( $class, @parts ) = @_;
 
+	# [ "Tim", "Brody", ] => "Tim Brody"
 	(ref($_) and ($_ = join(' ', @$_))) for @parts;
 
 	bless \@parts, $class;
@@ -57,10 +58,12 @@ sub first { $_[0]->[0] }
 sub von { $_[0]->[1] }
 sub last { $_[0]->[2] }
 sub jr { $_[0]->[3] }
+sub email { $_[0]->[4] }
 
 sub to_string
 {
-	join ' ', map { defined $_ ? $_ : () } @{$_[0]};
+	join(' ', map { defined $_ ? $_ : () } @{$_[0..3]}) .
+		(defined($_[4]) ? sprintf(" <%s>", $_[4]) : "");
 }
 }
 
@@ -88,7 +91,8 @@ sub new {
 			'vons' => 1,
 			'names' => 2,
 			'name' => 5,
-			'parts' => 4
+			'parts' => 4,
+			'name_email' => 7
 		}
 	},
 	{#State 1
@@ -96,92 +100,74 @@ sub new {
 			'PART' => 3
 		},
 		GOTOS => {
-			'parts' => 7
+			'parts' => 8
 		}
 	},
 	{#State 2
 		ACTIONS => {
-			'' => 8
+			'' => 9
 		}
 	},
 	{#State 3
 		ACTIONS => {
 			'PART' => 3
 		},
-		DEFAULT => -10,
+		DEFAULT => -12,
 		GOTOS => {
-			'parts' => 9
+			'parts' => 10
 		}
 	},
 	{#State 4
 		ACTIONS => {
-			'COMMA' => 11,
+			'COMMA' => 12,
 			'VON' => 6
 		},
-		DEFAULT => -4,
+		DEFAULT => -6,
 		GOTOS => {
-			'vons' => 10
+			'vons' => 11
 		}
 	},
 	{#State 5
 		ACTIONS => {
-			'AND' => 12
+			'EMAIL' => 13
 		},
-		DEFAULT => -2
+		DEFAULT => -5
 	},
 	{#State 6
 		ACTIONS => {
 			'VON' => 6
 		},
-		DEFAULT => -12,
+		DEFAULT => -14,
 		GOTOS => {
-			'vons' => 13
+			'vons' => 14
 		}
 	},
 	{#State 7
 		ACTIONS => {
-			'COMMA' => 14
-		}
+			'AND' => 15
+		},
+		DEFAULT => -2
 	},
 	{#State 8
-		DEFAULT => 0
+		ACTIONS => {
+			'COMMA' => 16
+		}
 	},
 	{#State 9
-		DEFAULT => -11
+		DEFAULT => 0
 	},
 	{#State 10
-		ACTIONS => {
-			'PART' => 3
-		},
-		GOTOS => {
-			'parts' => 15
-		}
+		DEFAULT => -13
 	},
 	{#State 11
 		ACTIONS => {
 			'PART' => 3
 		},
 		GOTOS => {
-			'parts' => 16
+			'parts' => 17
 		}
 	},
 	{#State 12
-		ACTIONS => {
-			'PART' => 3,
-			'VON' => 6
-		},
-		DEFAULT => -1,
-		GOTOS => {
-			'vons' => 1,
-			'names' => 17,
-			'name' => 5,
-			'parts' => 4
-		}
-	},
-	{#State 13
-		DEFAULT => -13
-	},
-	{#State 14
 		ACTIONS => {
 			'PART' => 3
 		},
@@ -189,45 +175,73 @@ sub new {
 			'parts' => 18
 		}
 	},
+	{#State 13
+		DEFAULT => -4
+	},
+	{#State 14
+		DEFAULT => -15
+	},
 	{#State 15
-		DEFAULT => -6
+		ACTIONS => {
+			'PART' => 3,
+			'VON' => 6
+		},
+		DEFAULT => -1,
+		GOTOS => {
+			'vons' => 1,
+			'names' => 19,
+			'name' => 5,
+			'parts' => 4,
+			'name_email' => 7
+		}
 	},
 	{#State 16
 		ACTIONS => {
-			'COMMA' => 19
+			'PART' => 3
 		},
-		DEFAULT => -5
+		GOTOS => {
+			'parts' => 20
+		}
 	},
 	{#State 17
-		DEFAULT => -3
+		DEFAULT => -8
 	},
 	{#State 18
 		ACTIONS => {
-			'COMMA' => 20
+			'COMMA' => 21
 		},
 		DEFAULT => -7
 	},
 	{#State 19
-		ACTIONS => {
-			'PART' => 3
-		},
-		GOTOS => {
-			'parts' => 21
-		}
+		DEFAULT => -3
 	},
 	{#State 20
 		ACTIONS => {
+			'COMMA' => 22
+		},
+		DEFAULT => -9
+	},
+	{#State 21
+		ACTIONS => {
 			'PART' => 3
 		},
 		GOTOS => {
-			'parts' => 22
+			'parts' => 23
 		}
 	},
-	{#State 21
-		DEFAULT => -8
-	},
 	{#State 22
-		DEFAULT => -9
+		ACTIONS => {
+			'PART' => 3
+		},
+		GOTOS => {
+			'parts' => 24
+		}
+	},
+	{#State 23
+		DEFAULT => -10
+	},
+	{#State 24
+		DEFAULT => -11
 	}
 ],
                                   yyrules  =>
@@ -247,42 +261,49 @@ sub { [ $_[1] ] }
 sub { [ $_[1], @{$_[3]} ] }
 	],
 	[#Rule 4
+		 'name_email', 2,
+sub { $_[1]->[4] = $_[2]; $_[1] }
+	],
+	[#Rule 5
+		 'name_email', 1, undef
+	],
+	[#Rule 6
 		 'name', 1,
 sub { Text::BibTeX::Name->new( $_[1], undef, pop @{$_[1]} ) }
 	],
-	[#Rule 5
+	[#Rule 7
 		 'name', 3,
 sub { Text::BibTeX::Name->new( $_[3], undef, $_[1] ) }
 	],
-	[#Rule 6
+	[#Rule 8
 		 'name', 3,
 sub { Text::BibTeX::Name->new( $_[1], $_[2], $_[3] ) }
 	],
-	[#Rule 7
+	[#Rule 9
 		 'name', 4,
 sub { Text::BibTeX::Name->new( $_[4], $_[1], $_[2] ) }
 	],
-	[#Rule 8
+	[#Rule 10
 		 'name', 5,
 sub { Text::BibTeX::Name->new( $_[5], undef, $_[1], $_[3] ) }
 	],
-	[#Rule 9
+	[#Rule 11
 		 'name', 6,
 sub { Text::BibTeX::Name->new( $_[6], $_[1], $_[2], $_[4] ) }
 	],
-	[#Rule 10
+	[#Rule 12
 		 'parts', 1,
 sub { [ $_[1] ] }
 	],
-	[#Rule 11
+	[#Rule 13
 		 'parts', 2,
 sub { [ $_[1], @{$_[2]} ] }
 	],
-	[#Rule 12
+	[#Rule 14
 		 'vons', 1,
 sub { [ $_[1] ] }
 	],
-	[#Rule 13
+	[#Rule 15
 		 'vons', 2,
 sub { [ $_[1], @{$_[2]} ] }
 	]
@@ -323,6 +344,8 @@ sub _Lexer
 			and return( "COMMA" );
 		s/^($REGEXP_VON)//
 			and return( "VON", $1 );
+		s/^<([^>]+)>//
+			and return( "EMAIL", $1 );
 		my $buffer = "";
 		while( s/^(\{|[^ ,])// )
 		{
