@@ -7536,3 +7536,7 @@ EPRINTS-3.1.0-rc-2
 
 2008-07-14 cjg + af05v
  * Added call_back options to render view menus and view items pages.
+
+2008-07-17 tdb
+ * When importing BibTeX can now specify email addresses
+
